# async-opd

./: LICENSE  Makefile  NOTICE  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-readiness.yml
configs/examples/: dapo_deepmath_qwen3_4b_8gpu.yaml  grpo_gsm8k_0.5b_4gpu.yaml  grpo_gsm8k_0.5b_8gpu.yaml  grpo_qwen3_1.7b.yaml  opd_deepmath_qwen3_1.7b_pg_mc64_async_8gpu.yaml  opd_deepmath_qwen3_1.7b_pg_mc64_stepoff_8gpu.yaml  opd_gsm8k_0.5b_4gpu.yaml  opd_qwen3_1.7b.yaml  sft_qwen3_1.7b.yaml
docs/: architecture.md  configuration.md  evaluation.md  index.md  loss-chunking.md  quickstart.md  training-modes.md  troubleshooting.md
opd/: __init__.py  launch_specs.py  pipeline.py  reward.py  streaming_stages.py
opd/cli/: __init__.py  eval.py  train.py
opd/coordinator/: __init__.py  base.py  config_mixin.py  evaluation.py  factory.py  fused_hybrid_sync.py  grpo_mode.py  mode.py  opd_mode.py  process_lifecycle.py  sft.py  step_off.py  step_off_async.py  streaming.py
opd/data/: __init__.py  batch_utils.py  (+4 more)
scripts/: create_test_models.py  gen_teacher_solutions.py  grade_code_generations_sandboxed.py  run_integration_tests.py  score_code_generation_artifacts.py
tests/: conftest_opd.py  cpu_stub_backends.py  test_cli_entrypoints.py  test_cpu_stub_pipeline.py  test_data_format.py  test_grpo.py  test_kl_loss.py  test_packing.py  test_pipeline_utils.py  test_public_api.py  test_sft_loss.py  test_tokenizer_padding.py
(+81 files in other folders)
